# yarn-plugin

./: .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.specify/: feature.json
.specify/integrations/: claude.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
alembic/: env.py
alembic/versions/: 757db25054a5_add_search_vector_triggers.py  b54b6692b415_switch_search_vector_to_simple_config.py  e5985d70e6e4_create_initial_schema.py  e910eab7e245_create_patterns_table.py
scripts/: seed.py
specs/001-yarn-recommendations/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/001-yarn-recommendations/contracts/: openapi-recommendations.yaml
specs/002-user-access/: research.md  spec.md  tasks.md
specs/003-pattern-recommendations/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-pattern-recommendations/checklists/: requirements.md
specs/003-pattern-recommendations/contracts/: openapi-pattern-recommendations.yaml
src/yarn_plugin/: config.py  main.py  mcp_server.py
src/yarn_plugin/infrastructure/: database.py
src/yarn_plugin/recommendations/domain/model/: ball_spec.py  (+14 more)
tests/integration/recommendations/: test_pattern_recommendations_endpoint.py  test_yarn_full_text_search.py  test_yarn_recommendations_endpoint.py
tests/integration/user_access/: test_user_access_endpoints.py
yarn-plugin/.specify/: feature.json
yarn-plugin/.specify/integrations/: speckit.manifest.json
yarn-plugin/.specify/memory/: constitution.md
yarn-plugin/specs/001-yarn-recommendations/: data-model.md  research.md  spec.md  tasks.md
yarn-plugin/specs/001-yarn-recommendations/checklists/: requirements.md
yarn-plugin/specs/001-yarn-recommendations/contracts/: openapi-recommendations.yaml
yarn-plugin/specs/002-user-access/: data-model.md  plan.md  quickstart.md  tasks.md
yarn-plugin/specs/002-user-access/checklists/: requirements.md
(+58 files in other folders)
