[project]
name = "yarn-plugin"
version = "0.1.0"
description = "API for yarn and knitting pattern recommendations — MCP + GPT Actions compatible"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "email-validator>=2.0.0",
    "mcp>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
    "import-linter>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yarn_plugin"]

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["yarn_plugin"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=90"

[tool.importlinter]
root_packages = ["yarn_plugin"]

[[tool.importlinter.contracts]]
name = "Domain must not import from Application or Infrastructure"
type = "forbidden"
source_modules = ["yarn_plugin.*.domain"]
forbidden_modules = ["yarn_plugin.*.application", "yarn_plugin.*.infrastructure"]

[[tool.importlinter.contracts]]
name = "Application must not import from Infrastructure"
type = "forbidden"
source_modules = ["yarn_plugin.*.application"]
forbidden_modules = ["yarn_plugin.*.infrastructure"]